--- a/Containers/app/src/main/res/values/strings.xml
+++ b/Containers/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="tab_text_2">Relative layout</string>
     <string name="tab_text_3">Constraint layout</string>
     <string name="tab_text_4">Grid layout</string>
+    <string name="tab_text_5">Frame layout</string>
 </resources>
